deploy docs through circleci

--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,5 @@ commands =
     python examples/pretty_json.py
     python examples/yacc-sql/yacc2tlang.py
     python examples/yacc-sql/sql_92.py
-    sphinx-build -b linkcheck docs website
-    sphinx-build -b html docs website
+    sphinx-build -b linkcheck docs docs/html
+    sphinx-build -b html docs docs/html
