--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,42 @@ jobs:
       - checkout
       - run: sudo pip install tox
       - run: tox
+      - persist_to_workspace:
+          root: docs
+          paths: html
+  docs-deploy:
+    docker:
+      - image: node:8.10.0
+    steps:
+      - checkout
+      - attach_workspace:
+          at: docs/html
+      - run:
+          name: Disable jekyll builds
+          command: touch docs/html/.nojekyll
+      - run:
+          name: Install and configure dependencies
+          command: |
+            npm install -g --silent gh-pages@2.0.1
+            git config user.email "alexeftimides@gmail.com"
+            git config user.name "Alex Eftimiades"
+      - add_ssh_keys:
+          fingerprints:
+            - "80:30:82:3d:5f:0b:19:f0:2c:27:f7:3b:d8:a2:a0:c0"
+      - run:
+          name: Deploy docs to gh-pages branch
+          command: gh-pages -b docs --dotfiles --message "[skip ci] Updates" --dist docs/html
 workflows:
   version: 2
-  test:
+  build:
     jobs:
-      - test
+      - test:
+          filters:
+            branches:
+              ignore: docs
+      - docs-deploy:
+          requires:
+            - test
+          filters:
+            branches:
+              only: main
