--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,8 +28,8 @@ jobs:
           name: Install and configure dependencies
           command: |
             npm install -g --silent gh-pages@2.0.1
-            git config user.email "alexeftimides@gmail.com"
-            git config user.name "Alex Eftimiades"
+            git config user.email "$(git log --format=%ae -n 1)"
+            git config user.name "$(git log --format=%an -n 1)"
       - add_ssh_keys:
           fingerprints:
             - "80:30:82:3d:5f:0b:19:f0:2c:27:f7:3b:d8:a2:a0:c0"
