--- a/tox.ini
+++ b/tox.ini
@@ -17,5 +17,7 @@ commands =
     python examples/pretty_json.py
     python examples/yacc-sql/yacc2tlang.py
     python examples/yacc-sql/sql_92.py
+    python examples/antlr2tlang/antlr2tlang.py
+    python examples/antlr2tlang/sqlite.py
     sphinx-build -b linkcheck docs docs/linkcheck
     sphinx-build -b html docs docs/html
