replace of replace works in full

--- a/tox.ini
+++ b/tox.ini
@@ -19,5 +19,6 @@ commands =
     python examples/yacc-sql/sql_92.py
     python examples/antlr2tlang/antlr2tlang.py
     python examples/antlr2tlang/sqlite.py
+    python examples/antlr2tlang/transpile.py
     sphinx-build -b linkcheck docs docs/linkcheck
     sphinx-build -b html docs docs/html
