--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
   rev: 4.0.1
   hooks:
   - id: flake8
-    args: [--max-line-length=88, '--per-file-ignores=__init__.py:F401,F403 yacc2tlang.py:W291,W191,E501,E101']
+    args: [--max-line-length=88, '--per-file-ignores=__init__.py:F401,F403 yacc2tlang.py:W291,W191,E501,E101', '--exclude=sqlite.py']
 
 - repo: https://github.com/pre-commit/mirrors-mypy
   rev: v0.942
